# matsunetto

./: Cargo.toml  README.md  justfile
mnet-client/: Cargo.toml
mnet-client/src/: api.rs  config.rs  metrics.rs
mnet-server/: Cargo.toml
mnet-server/src/: db.rs  main.rs  models.rs  router.rs
mnet_cli/: Cargo.toml  README.md
mnet_cli/src/: api.rs  cli.rs  colors.rs  main.rs
mnet_client/: Cargo.toml  README.md
mnet_client/src/: api.rs  main.rs  metrics.rs
mnet_server/: Cargo.toml  README.md
mnet_server/src/: db.rs  headers.rs  main.rs  router.rs  utils.rs
mnet_types/: Cargo.toml  README.md
mnet_types/src/: api.rs  lib.rs
tools/: apitest.sh
