[package]
name = "mnet_client"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur"]
description = ""
repository = "https://github.com/MrPicklePinosaur/matsunetto"

[dependencies]
systemstat = "0.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
anyhow = "1"

mnet_types = { path = "../mnet_types" }
