[package]
name = "mnet_server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur"]
description = ""
repository = "https://github.com/MrPicklePinosaur/matsunetto"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.28.0", features = ["bundled"] }

chrono = "0.4"
anyhow = "1"
thiserror = "1"
rand = "0.8"
jwt = "0.16"
hmac = "0.12"
sha2 = "0.10"

mnet_types = { path = "../mnet_types" }
