[package]
name = "mnet_types"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur"]
description = ""
repository = "https://github.com/MrPicklePinosaur/matsunetto"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[lib]
name = "mnet_types"
path = "src/lib.rs"
